--- a/templates/index.html
+++ b/templates/index.html
@@ -39,7 +39,7 @@
                         <tr>
                             <th>نام</th>
                             <th>تلفن</th>
-                            <th>تعداد سردخانه‌ها</th>
+                            <th>کد سردخانه</th>
                             <th>تلفن سردخانه‌ها</th>
                             <th>حذف</th> <!-- ستون جدید برای ستون حذف -->
                             <th>ویرایش</th> <!-- عنوان جدید برای ستون ویرایش -->
@@ -80,7 +80,7 @@
         <form id="user-form" method="POST" action="">
             <input type="text" name="name" placeholder="نام" required>
             <input type="text" name="telephone" placeholder="تلفن" required>
-            <input type="number" name="coldrooms_code" placeholder="تعداد سردخانه‌ها" required>
+            <input type="number" name="coldrooms_code" placeholder="کد سردخانه" required>
             <input type="text" name="coldrooms_phone" placeholder="تلفن سردخانه‌ها" required>
             <button type="submit" name="id">ثبت</button>
             <button type="button" class="close-btn" id="close-popup-btn">بستن</button>
