--- a/templates/index.html
+++ b/templates/index.html
@@ -82,7 +82,7 @@
         <form id="user-form" method="POST" action="">
             <input type="text" name="name" placeholder="نام" required>
             <input type="text" name="telephone" placeholder="تلفن" required>
-            <<input type="text" name="city" placeholder="شهر" >
+            <input type="text" name="city" placeholder="شهر" >
             <input type="number" name="coldrooms_code" placeholder="کد سردخانه" required>
             <input type="text" name="coldrooms_phone" placeholder="تلفن سردخانه‌ها" required>
             <button type="submit" name="id">ثبت</button>
