--- a/templates/index.html
+++ b/templates/index.html
@@ -1,95 +1,255 @@
 <!DOCTYPE html>
 <html lang="fa">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>فرم ثبت اطلاعات</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-</head>
-<body>
-    <div class="container">
-        <h1>شرکت سردخانه ها</h1>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>پنل کاربری</title>
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/style.css') }}"
+    />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/bootstrap.min.css') }}"
+    />
+    <script src="{{ url_for('static', filename='js/jquery.slim.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
+    <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
+  </head>
 
-        <!-- نمایش پیغام‌ها -->
-        {% if message %}
-        <div class="message {% if error %}error{% else %}success{% endif %}">
-            {{ message }}
-        </div>
-        {% endif %}
-        <div class="row">
-            <div class="col-12">
-                <form action="/" method="post">
-                    <input class="col-6" type="text" name="query" placeholder="جستجو نام یا تلفن...">
-                    <button class="col-2" type="submit" name="submit" value="submit" >جستجو</button>
-                    <button id="open-popup-btn" class="col-2 bg-info btn">ثبت اطلاعات جدید</button>
-                </form>
-            </div>
-        </div>
-        <h2>لیست کاربران</h2>
-    </div>
-{% if users %}
-<div class="container-fluid">
-    <div class="row justify-content-center">
-        <div class="col-12 col-md-10">
-            <div class="table-responsive" style="max-height: 550px;">
-                <table class="table table-bordered">
-                     <thead class="bg-primary text-white" style="position: sticky; top: 0;">
-                        <tr>
-                            <th>نام</th>
-                            <th>تلفن</th>
-                            <th>شهر</th>
-                            <th>کد سردخانه</th>
-                            <th>تلفن سردخانه‌ها</th>
-                            <th>حذف</th> <!-- ستون جدید برای ستون حذف -->
-                            <th>ویرایش</th> <!-- عنوان جدید برای ستون ویرایش -->
-                        </tr>
-                    </thead>
-                    <tbody>
-                        {% for user in users %}
-                        <tr>
-                            <td>{{ user.name }}</td>
-                            <td>{{ user.telephone }}</td>
-                            <td>{{ user.city }}</td>
-                            <td>{{ user.coldrooms_code }}</td>
-                            <td>{{ user.coldrooms_phone }}</td>
-                            <td>
-                                <!-- دکمه حذف که به URL حذف ارسال می‌شود -->
-                                <form method="POST" action="/delete_user/{{user.id }}">
-                                    <button type="submit">حذف</button>
-                                </form>
-                            </td>
-                            <td>
-                             <button value="{{user.__data__.values()}}" class="bg-info btn open-popup-edit">ویرایش اطلاعات</button>
-                            </td>
-                        </tr>
-                        {% endfor %}
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
-</div>
-{% else %}
-<p>هیچ کاربری در سیستم ثبت نشده است.</p>
-{% endif %}
+  <body class="vazir-font">
+    <!-- نوار منو -->
+    <nav
+      class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top"
+      dir="rtl"
+    >
+      <a class="btn btn-light mr-4 flex-wrap" href="/logout">خروج از حساب</a>
+      {% if username%}
+      <a class="navbar-brand vazir-font" href="#"
+        >نام کاربری : {{ username }}</a
+      >
+      {% endif %}
+    </nav>
 
+    <!-- نام پروژه -->
+    <div
+      class="container-fluid text-center justify-content-center"
+      style="margin-top: 80px"
+    >
+      <h1 class="text-dark text-cenetr mt-4 vazir-font">پنل مدیریت</h1>
+    </div>
+
+    <!-- لیست کاربران -->
+    <div class="container-fluid mt-3">
+      <div class="row justify-content-center">
+        <!-- سرچ باکس -->
+        <div class="col-12 col-md-8 w-100">
+          <div class="input-group mb-3" dir="ltr">
+            <div class="input-group-prepend">
+              <button
+                id="open-popup-btn"
+                class="bg-info btn text-light flex-wrap hover-bg-effect"
+              >
+                ثبت اطلاعات جدید
+              </button>
+            </div>
+            <input
+              dir="rtl"
+              class="form-control"
+              id="userSearch"
+              type="text"
+              placeholder="جستجو در کاربران..."
+            />
+          </div>
+        </div>
+      </div>
+
+      <!-- جدول -->
+      {% if users %}
+      <div class="row justify-content-center">
+        <div class="col-12 col-md-10 col-lg-8">
+          <div
+            class="table-responsive"
+            style="max-height: 550px; border-radius: 10px"
+          >
+            <table class="table table-bordered table-hover">
+              <thead class="thead-dark">
+                <tr>
+                  <th>نام</th>
+                  <th>تلفن</th>
+                  <th>شهر</th>
+                  <th>کد سردخانه</th>
+                  <th>تلفن سردخانه‌ها</th>
+                  <th class="text-center">حذف</th>
+                  <th class="text-center">ویرایش</th>
+                </tr>
+              </thead>
+
+              <tbody id="userTable">
+                {% for user in users %}
+
+                <!-- هر ردیف یک کاربر -->
+                <tr>
+                  <td>{{ user.name }}</td>
+                  <td>{{ user.telephone }}</td>
+                  <td>{{ user.city }}</td>
+                  <td>{{ user.coldrooms_code }}</td>
+                  <td>{{ user.coldrooms_phone }}</td>
+
+                  <!-- دکمه حذف -->
+                  <td class="text-center">
+                    <form
+                      method="POST"
+                      action="/delete_user/{{user.id }}"
+                      class="d-inline"
+                    >
+                      <button
+                        type="submit"
+                        class="btn btn-danger btn-sm hover-bg-effect"
+                      >
+                        حذف
+                      </button>
+                    </form>
+                  </td>
+
+                  <!-- دکمه ویرایش -->
+                  <td class="text-center">
+                    <button
+                      value="{{user.__data__.values()}}"
+                      class="btn btn-info btn-sm open-popup-edit hover-bg-effect"
+                    >
+                      ویرایش
+                    </button>
+                  </td>
+                </tr>
+                {% endfor %}
+              </tbody>
+            </table>
+          </div>
+
+          <!-- راهنما -->
+          <div class="alert alert-info mt-3 text-center">
+            <strong>راهنما:</strong> برای جستجو در جدول، متن مورد نظر خود را در
+            کادر جستجو وارد کنید.
+          </div>
+        </div>
+      </div>
+      {% else %}
+      <!-- پیغام خالی بودن لیست -->
+      <div class="row justify-content-center">
+        <div class="col-12 justify-content-center text-center">
+          <p class="text-danger h3">هیچ کاربری در سیستم ثبت نشده است.</p>
+        </div>
+      </div>
+      {% endif %}
+    </div>
+
+    <!-- نمایش پیغام‌ها -->
+    {% if message %}
+    <div class="container text-center mt-5 justify-content-center">
+      <div
+        class="alert alert-danger w-100 alert-dismissible fade show"
+        role="alert"
+      >
+        <strong>ERROR !</strong> {{ message }}
+        <button
+          type="button"
+          class="close"
+          data-dismiss="alert"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    </div>
+    {% endif %}
+
+    <!-- popup -->
     <div class="popup-overlay" id="popup-overlay"></div>
 
-    <div class="popup" id="popup">
-        <h2>فرم اطلاعات</h2>
-        <form id="user-form" method="POST" action="">
-            <input type="text" name="name" placeholder="نام" required>
-            <input type="text" name="telephone" placeholder="تلفن" required>
-            <input type="text" name="city" placeholder="شهر" >
-            <input type="number" name="coldrooms_code" placeholder="کد سردخانه" required>
-            <input type="text" name="coldrooms_phone" placeholder="تلفن سردخانه‌ها" required>
-            <button type="submit" name="id">ثبت</button>
-            <button type="button" class="close-btn" id="close-popup-btn">بستن</button>
-        </form>
+    <div class="popup p-5 text-center justify-content-center" id="popup">
+      <h2 class="text-dark text-center vazir-font">فرم اطلاعات</h2>
+
+      <!-- فرم ثبت اطلاعات -->
+      <form
+        class="form-group w-100 text-center justify-content-center"
+        id="user-form"
+        method="POST"
+        action=""
+      >
+        <!-- فیلد نام -->
+        <input
+          class="form-control mb-2 mb-md-3 border border-dark border-2"
+          type="text"
+          name="name"
+          placeholder="نام"
+          required
+        />
+
+        <!-- فیلد تلفن -->
+        <input
+          class="form-control mb-2 mb-md-3 border border-dark border-2"
+          type="text"
+          name="telephone"
+          placeholder="تلفن"
+          required
+        />
+
+        <!-- فیلد شهر -->
+        <input
+          class="form-control mb-2 mb-md-3 border border-dark border-2"
+          type="text"
+          name="city"
+          placeholder="شهر"
+        />
+
+        <!-- فیلد کد سردخانه -->
+        <input
+          class="form-control mb-2 mb-md-3 border border-dark border-2"
+          type="number"
+          name="coldrooms_code"
+          placeholder="کد سردخانه"
+          required
+        />
+
+        <!-- فیلد تلفن سردخانه‌ها -->
+        <input
+          class="form-control mb-2 mb-md-3 border border-dark border-2"
+          type="text"
+          name="coldrooms_phone"
+          placeholder="تلفن سردخانه‌ها"
+          required
+        />
+
+        <!-- فیلد id -->
+        <input type="hidden" name="id" id="user-id" />
+
+        <!-- دکمه ها -->
+
+        <div class="text-cenetr justify-content-center w-100">
+          <!-- دکمه ثبت -->
+          <button
+            class="btn btn-primary hover-bg-effect py-2 w-100"
+            type="submit"
+            name="id"
+          >
+            ثبت
+          </button>
+
+          <br />
+
+          <!-- دکمه بستن -->
+          <button
+            class="btn btn-danger hover-bg-effect py-2 w-100 mt-2"
+            type="button"
+            id="close-popup-btn"
+          >
+            بستن
+          </button>
+        </div>
+      </form>
     </div>
 
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
-</body>
+  </body>
 </html>
