--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,11 @@
       rel="stylesheet"
       href="{{ url_for('static', filename='css/bootstrap.min.css') }}"
     />
+    <link
+      rel="stylesheet"
+      href="{{ url_for('static', filename='css/toastify.min.css') }}"
+    />
+    <script src="{{ url_for('static', filename='js/toastify-js.js') }}"></script>
     <script src="{{ url_for('static', filename='js/jquery.slim.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/popper.min.js') }}"></script>
     <script src="{{ url_for('static', filename='js/bootstrap.bundle.min.js') }}"></script>
@@ -23,15 +28,18 @@
       class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top"
       dir="rtl"
     >
-      <a class="btn btn-light mr-4 flex-wrap" href="/logout">خروج از حساب</a>
       {% if username%}
-      <a class="navbar-brand vazir-font" href="#"
-        >نام کاربری : {{ username }}</a
-      >
+        <a class="navbar-brand vazir-font" href="#">
+          نام کاربری : {{ username }}
+        </a>
       {% endif %}
+      <a class="btn btn-light" href="/logout">خروج از حساب</a>
+      <a class="btn btn-light" href="/price-panel">پنل قیمت ها</a>
+      <button class="btn btn-light" id="open-discription">تغییر متن توضیحات در پیش فاکتور</button>
+      <button class="btn btn-light" id="open-explain">تغییر متن شرح کالا در پیش فاکتور</button>
     </nav>
 
-    <!-- نام پروژه -->
+    <!-- نام پنل -->
     <div
       class="container-fluid text-center justify-content-center"
       style="margin-top: 80px"
@@ -249,6 +257,27 @@
         </div>
       </form>
     </div>
+
+    <!-- popup برای تغییر متن شرح کالا -->
+    <div class="popup p-5 text-center justify-content-center" style="min-width: 50vh;" id="popupExplain">
+      <h2 class="text-dark text-center text-wrap vazir-font"> تغییر متن شرح کالا </h2>
+      <textarea class="form-control mb-2 mb-md-3 border border-dark border-2" rows="4" style="min-height: 50vh;" placeholder="توضیحات کالا"></textarea>
+      <div class="text-cenetr justify-content-center w-100">
+        <button class="btn btn-primary hover-bg-effect py-2 w-100" type="submit">ذخیره تغییرات</button>
+        <button class="btn btn-danger hover-bg-effect py-2 w-100 mt-1" id="close-explain">بستن</button>
+      </div>
+    </div>
+
+    <!-- popup برای تغییر متن توضیحات -->
+    <div class="popup p-5 text-center justify-content-center" style="min-width: 50vh;" id="popupDiscription">
+      <h2 class="text-dark text-center text-wrap vazir-font"> تغییر متن توضیحات </h2>
+      <textarea class="form-control mb-2 mb-md-3 border border-dark border-2" rows="4" style="min-height: 50vh;" placeholder="توضیحات پیش فاکتور"></textarea>
+      <div class="text-cenetr justify-content-center w-100">
+        <button class="btn btn-primary hover-bg-effect py-2 w-100" type="submit">ذخیره تغییرات</button>
+        <button class="btn btn-danger hover-bg-effect py-2 w-100 mt-1" id="close-discription">بستن</button>
+      </div>
+    </div>
+
 
     <script src="{{ url_for('static', filename='js/script.js') }}"></script>
   </body>
