--- a/templates/index.html
+++ b/templates/index.html
@@ -24,19 +24,27 @@
 
   <body class="vazir-font">
     <!-- نوار منو -->
+
     <nav
-      class="navbar navbar-expand-sm bg-dark navbar-dark fixed-top"
-      dir="rtl"
-    >
-      {% if username%}
-        <a class="navbar-brand vazir-font" href="#">
-          نام کاربری : {{ username }}
+      class="navbar navbar-expand-sm bg-transparent navbar-dark fixed-top"
+      dir="rtl">
+
+        
+
+      <div class="nav-item dropdown my-auto mr-5" dir="rtl">
+        <a class="nav-link text-dark h2" href="#" id="navbarDropdownMenuLink" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+             ☰   
         </a>
-      {% endif %}
-      <a class="btn btn-light" href="/logout">خروج از حساب</a>
-      <a class="btn btn-light" href="/price-panel">پنل قیمت ها</a>
-      <button class="btn btn-light" id="open-discription">تغییر متن توضیحات در پیش فاکتور</button>
-      <button class="btn btn-light" id="open-explain">تغییر متن شرح کالا در پیش فاکتور</button>
+        <div class="dropdown-menu p-2" style="width: 20vw; right: 0%; height: auto;" aria-labelledby="navbarDropdownMenuLink" dir="rtl">
+            {% if username%}
+                <p class="vazir-font text-dark text-wrap text-right h4" href="#">نام کاربری : {{ username }}</p>
+            {% endif %}
+            <a class="btn btn-dark text-wrap mt-1 w-100" href="/logout">خروج از حساب</a>
+            <a class="btn btn-dark text-wrap mt-1 w-100" href="/price-panel">پنل قیمت ها</a>
+            <button class="btn btn-dark text-wrap mt-1 w-100" id="open-discription">تغییر متن توضیحات در پیش فاکتور</button>
+            <button class="btn btn-dark text-wrap mt-1 w-100 mb-2dark" id="open-explain">تغییر متن شرح کالا در پیش فاکتور</button>
+        </div>
+      </div>
     </nav>
 
     <!-- نام پنل -->
