--- a/templates/price_panel.html
+++ b/templates/price_panel.html
@@ -50,6 +50,26 @@
       <h1 class="text-dark text-cenetr mt-4 vazir-font">پنل قیمت ها</h1>
     </div>
 
+    <!-- نمایش تغییرات قیمت ها -->
+    {% if chn_price %}
+    <div class="container text-center mt-2 mb-2 justify-content-center">
+      <div
+        class="alert alert-success text-dark text-wrap w-100 alert-dismissible fade show"
+        role="alert"
+      >
+        <strong class="h4 text-right" dir="rtl">{{ chn_price }}</strong> 
+        <button
+          type="button"
+          class="close"
+          data-dismiss="alert"
+          aria-label="Close"
+        >
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+    </div>
+    {% endif %}
+
     <!-- لیست سردخانه ها -->
     <div class="container mt-3">
 
