--- a/templates/invoice_template.html
+++ b/templates/invoice_template.html
@@ -2,7 +2,7 @@
 <html dir="rtl" lang="fa">
     <head>
         <meta charset="UTF-8">
-        <title>پیشنهاد قیمت</title>
+        <title>پیش فاکتور</title>
         <style>
             @font-face {
                 font-family: 'Titr';
@@ -291,7 +291,7 @@
                 <!-- Center section -->
                 <div class="header-center">
                     <p>بسمه تعالی</p>
-                    <p>پیشنهاد قیمت</p>
+                    <p>پیش فاکتور</p>
                 </div>
 
                 <!-- Left section (logo) -->
@@ -311,6 +311,7 @@
                 <tr>
                     <td>نام خریدار:</td>
                     <td>{{ name }}</td>
+                    <span>{{ storage_type }}</span>
                 </tr>
                 <tr>
                     <td>شماره تماس:</td>
