--- a/templates/invoice_template.html
+++ b/templates/invoice_template.html
@@ -337,7 +337,7 @@
                 <tr>
                     <td style="text-align: center;">1</td>
                     <td>
-                        تجهیزات سردخانه به  گنجایش حدود {{ tonnage }} تن به ابعاد حدود {{ dimensions }} با کمپرسور بیتزر {{ compressor_power }} اسب میباشد.
+                        تجهیزات سردخانه به  گنجایش حدود {{ tonnage }} تن به ابعاد حدود {{ dimensions }} میباشد.
                         <br />
                         {{ product_explain_text }}
 
